# rust-axum-2024

./: Cargo.toml  README.md  config.yml
crates/api-server/: Cargo.toml
crates/api-server/src/: lib.rs  main.rs
crates/api-server/src/api/: router.rs
crates/api-server/src/application/commands/: create_otp_command.rs  create_user_command.rs  mod.rs  verify_otp_command.rs  verify_token_command.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs
crates/entity/: Cargo.toml
crates/entity/src/: device.rs  user.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs  main.rs
src/: main.rs
src/application/commands/: user_login_command.rs
src/application/queries/: get_ipinfo_query.rs  hello_world_query.rs  mod.rs
