[package]
name = "rust-axum-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
serde = { version = "1.0.200", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
