[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "rust-axum-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.200", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
jsonwebtoken = "9.3.0"
tracing = "0.1.40"
hashbrown = { version = "0.14.5", features = ["serde"] }
chron = "0.1.4"
chrono = "0.4.38"
totp-rs = "5.5.1"
