[package]
name = "api-server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.12.4", features = ["json"] }
jsonwebtoken = "9.3.0"
tracing = { workspace = true }
hashbrown = { version = "0.14.5", features = ["serde"] }
chrono = { workspace = true }
totp-rs = "5.5.1"
